--- a/src/IssueLogger/IssueLogger.Domain/IssueLogger.Domain.csproj
+++ b/src/IssueLogger/IssueLogger.Domain/IssueLogger.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Common\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
